==> divekarshubham/amazon-freertos/vendors/espressif/boards/esp32/ports/ota_pal_for_aws/ota_pal.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include "ota.h"
#include "ota_pal.h"
#include "ota_platform_interface.h"
#include "ota_interface_private.h"
    #include "ota_config.h"
#include "ota_config_defaults.h"
#include "types/iot_network_types.h"
#include "aws_iot_network_config.h"
#include "iot_crypto.h"
#include "core_pkcs11.h"
#include "esp_system.h"
#include "esp_log.h"
#include "soc/rtc_cntl_reg.h"
#include "soc/rtc_wdt.h"
#include "esp_partition.h"
#include "esp_spi_flash.h"
#include "esp_image_format.h"
#include "esp_ota_ops.h"
#include "aws_esp_ota_ops.h"
#include "mbedtls/asn1.h"
#include "mbedtls/bignum.h"
#include "mbedtls/base64.h"
#define kOTA_HalfSecondDelay    pdMS_TO_TICKS( 500UL )
#define ECDSA_INTEGER_LEN       32
#define ECDSA_SIG_SIZE    80

OtaErr_t otaPal_Abort( OtaFileContext_t * const C )
{
    OtaErr_t ota_ret = OTA_ERR_ABORT_FAILED;

    if( _esp_ota_ctx_validate( C ) )
    {
        _esp_ota_ctx_close( C );
        ota_ret = OTA_ERR_NONE;
    }
    else if( C && ( C->pFile == NULL ) )
    {
        ota_ret = OTA_ERR_NONE;
    }

    return ota_ret;
}

OtaErr_t otaPal_CreateFileForRx( OtaFileContext_t * const C )
{
    if( ( NULL == C ) || ( NULL == C->pFilePath ) )
    {
        return OTA_ERR_RX_FILE_CREATE_FAILED;
    }

    const esp_partition_t * update_partition = aws_esp_ota_get_next_update_partition( NULL );

    if( update_partition == NULL )
    {
        ESP_LOGE( TAG, "failed to find update partition" );
        return OTA_ERR_RX_FILE_CREATE_FAILED;
    }

    ESP_LOGI( TAG, "Writing to partition subtype %d at offset 0x%x",
              update_partition->subtype, update_partition->address );

    esp_ota_handle_t update_handle;
    esp_err_t err = aws_esp_ota_begin( update_partition, OTA_SIZE_UNKNOWN, &update_handle );

    if( err != ESP_OK )
    {
        ESP_LOGE( TAG, "aws_esp_ota_begin failed (%d)", err );
        return OTA_ERR_RX_FILE_CREATE_FAILED;
    }

    ota_ctx.cur_ota = C;
    ota_ctx.update_partition = update_partition;
    ota_ctx.update_handle = update_handle;

    C->pFile = ( uint8_t * ) &ota_ctx;
    ota_ctx.data_write_len = 0;
    ota_ctx.valid_image = false;

    ESP_LOGI( TAG, "aws_esp_ota_begin succeeded" );

    return OTA_ERR_NONE;
}

u8 * prvPAL_ReadAndAssumeCertificate( const u8 * const pucCertName,
                                      uint32_t * const ulSignerCertSize )
{
    uint8_t * pucCertData;
    uint32_t ulCertSize;
    uint8_t * pucSignerCert = NULL;
    CK_RV xResult;

    xResult = prvGetCertificate( ( const char * ) pucCertName, &pucSignerCert, ulSignerCertSize );

    if( ( xResult == CKR_OK ) && ( pucSignerCert != NULL ) )
    {
        ESP_LOGI( TAG, "Using cert with label: %s OK\r\n", ( const char * ) pucCertName );
    }
    else
    {
        ESP_LOGI( TAG, "No such certificate file: %s. Using aws_ota_codesigner_certificate.h.\r\n",
                  ( const char * ) pucCertName );

        /* Allocate memory for the signer certificate plus a terminating zero so we can copy it and return to the caller. */
        ulCertSize = sizeof( signingcredentialSIGNING_CERTIFICATE_PEM );
        pucSignerCert = pvPortMalloc( ulCertSize );                           /*lint !e9029 !e9079 !e838 malloc proto requires void*. */
        pucCertData = ( uint8_t * ) signingcredentialSIGNING_CERTIFICATE_PEM; /*lint !e9005 we don't modify the cert but it could be set by PKCS11 so it's not const. */

        if( pucSignerCert != NULL )
        {
            memcpy( pucSignerCert, pucCertData, ulCertSize );
            *ulSignerCertSize = ulCertSize;
        }
        else
        {
            ESP_LOGE( TAG, "Error: No memory for certificate in prvPAL_ReadAndAssumeCertificate!\r\n" );
        }
    }

    return pucSignerCert;
}

OtaErr_t prvPAL_CheckFileSignature( OtaFileContext_t * const C )
{
    OtaErr_t result;
    uint32_t ulSignerCertSize;
    void * pvSigVerifyContext;
    u8 * pucSignerCert = 0;
    static spi_flash_mmap_memory_t ota_data_map;
    const void * buf = NULL;

    /* Verify an ECDSA-SHA256 signature. */
    if( CRYPTO_SignatureVerificationStart( &pvSigVerifyContext, cryptoASYMMETRIC_ALGORITHM_ECDSA,
                                           cryptoHASH_ALGORITHM_SHA256 ) == pdFALSE )
    {
        ESP_LOGE( TAG, "signature verification start failed" );
        return OTA_ERR_SIGNATURE_CHECK_FAILED;
    }

    pucSignerCert = prvPAL_ReadAndAssumeCertificate( ( const u8 * const ) C->pCertFilepath, &ulSignerCertSize );

    if( pucSignerCert == NULL )
    {
        ESP_LOGE( TAG, "cert read failed" );
        return OTA_ERR_BAD_SIGNER_CERT;
    }

    esp_err_t ret = esp_partition_mmap( ota_ctx.update_partition, 0, ota_ctx.data_write_len,
                                        SPI_FLASH_MMAP_DATA, &buf, &ota_data_map );

    if( ret != ESP_OK )
    {
        ESP_LOGE( TAG, "partition mmap failed %d", ret );
        result = OTA_ERR_SIGNATURE_CHECK_FAILED;
        goto end;
    }

    CRYPTO_SignatureVerificationUpdate( pvSigVerifyContext, buf, ota_ctx.data_write_len );
    spi_flash_munmap( ota_data_map );

    if( CRYPTO_SignatureVerificationFinal( pvSigVerifyContext, ( char * ) pucSignerCert, ulSignerCertSize,
                                           C->pSignature->data, C->pSignature->size ) == pdFALSE )
    {
        ESP_LOGE( TAG, "signature verification failed" );
        result = OTA_ERR_SIGNATURE_CHECK_FAILED;
    }
    else
    {
        result = OTA_ERR_NONE;
    }

end:

    /* Free the signer certificate that we now own after prvReadAndAssumeCertificate(). */
    if( pucSignerCert != NULL )
    {
        vPortFree( pucSignerCert );
    }

    return result;
}

OtaErr_t otaPal_CloseFile( OtaFileContext_t * const C )
{
    OtaErr_t result = OTA_ERR_NONE;

    if( !_esp_ota_ctx_validate( C ) )
    {
        return OTA_ERR_FILE_CLOSE;
    }

    if( C->pSignature == NULL )
    {
        ESP_LOGE( TAG, "Image Signature not found" );
        _esp_ota_ctx_clear( &ota_ctx );
        result = OTA_ERR_SIGNATURE_CHECK_FAILED;
    }
    else if( ota_ctx.data_write_len == 0 )
    {
        ESP_LOGE( TAG, "No data written to partition" );
        result = OTA_ERR_SIGNATURE_CHECK_FAILED;
    }
    else
    {
        /* Verify the file signature, close the file and return the signature verification result. */
        result = prvPAL_CheckFileSignature( C );

        if( result != OTA_ERR_NONE )
        {
            esp_partition_erase_range( ota_ctx.update_partition, 0, ota_ctx.update_partition->size );
        }
        else
        {
            /* Write ASN1 decoded signature at the end of firmware image for bootloader to validate during bootup */
            esp_sec_boot_sig_t * sec_boot_sig = ( esp_sec_boot_sig_t * ) malloc( sizeof( esp_sec_boot_sig_t ) );

            if( sec_boot_sig != NULL )
            {
                memset( sec_boot_sig->sec_ver, 0x00, sizeof( sec_boot_sig->sec_ver ) );
                memset( sec_boot_sig->pad, 0xFF, sizeof( sec_boot_sig->pad ) );
                result = asn1_to_raw_ecdsa( C->pSignature->data, C->pSignature->size, sec_boot_sig->raw_ecdsa_sig );

                if( result == OTA_ERR_NONE )
                {
                    esp_err_t ret = aws_esp_ota_write( ota_ctx.update_handle, sec_boot_sig, ota_ctx.data_write_len, ECDSA_SIG_SIZE );

                    if( ret != ESP_OK )
                    {
                        return OTA_ERR_FILE_CLOSE;
                    }

                    ota_ctx.data_write_len += ECDSA_SIG_SIZE;
                }

                free( sec_boot_sig );
                ota_ctx.valid_image = true;
            }
            else
            {
                result = OTA_ERR_SIGNATURE_CHECK_FAILED;
            }
        }
    }

    return result;
}

OtaErr_t IRAM_ATTR otaPal_ResetDevice( OtaFileContext_t * const C )
{
    ( void ) C;

    /* Short delay for debug log output before reset. */
    vTaskDelay( kOTA_HalfSecondDelay );
    esp_restart();
    return OTA_ERR_NONE;
}

OtaPalImageState_t otaPal_GetPlatformImageState( OtaFileContext_t * const C )
{
    OtaPalImageState_t eImageState = OtaPalImageStateUnknown;
    uint32_t ota_flags;

    ( void ) C;

    ESP_LOGI( TAG, "%s", __func__ );

    if( ( ota_ctx.cur_ota != NULL ) && ( ota_ctx.data_write_len != 0 ) )
    {
        /* Firmware update is complete or on-going, retrieve its status */
        ota_flags = ota_ctx.valid_image == true ? ESP_OTA_IMG_NEW : ESP_OTA_IMG_INVALID;
    }
    else
    {
        esp_err_t ret = aws_esp_ota_get_boot_flags( &ota_flags, true );

        if( ret != ESP_OK )
        {
            ESP_LOGE( TAG, "failed to get ota flags %d", ret );
            return eImageState;
        }
    }

    switch( ota_flags )
    {
        case ESP_OTA_IMG_PENDING_VERIFY:
            /* Pending Commit means we're in the Self Test phase. */
            eImageState = OtaPalImageStatePendingCommit;
            break;

        case ESP_OTA_IMG_VALID:
        case ESP_OTA_IMG_NEW:
            eImageState = OtaPalImageStateValid;
            break;

        default:
            eImageState = OtaPalImageStateInvalid;
            break;
    }

    return eImageState;
}

OtaErr_t otaPal_SetPlatformImageState( OtaFileContext_t * const C,
                                       OtaImageState_t eState )
{
    OtaErr_t eResult = OTA_ERR_NONE;
    int state;

    ( void ) C;

    ESP_LOGI( TAG, "%s, %d", __func__, eState );

    switch( eState )
    {
        case OtaImageStateAccepted:
            ESP_LOGI( TAG, "Set image as valid one!" );
            state = ESP_OTA_IMG_VALID;
            break;

        case OtaImageStateRejected:
            ESP_LOGW( TAG, "Set image as invalid!" );
            state = ESP_OTA_IMG_INVALID;
            break;

        case OtaImageStateAborted:
            ESP_LOGW( TAG, "Set image as aborted!" );
            state = ESP_OTA_IMG_ABORTED;
            break;

        case OtaImageStateTesting:
            ESP_LOGW( TAG, "Set image as testing!" );
            return OTA_ERR_NONE;

        default:
            ESP_LOGW( TAG, "Set image invalid state!" );
            return OTA_ERR_BAD_IMAGE_STATE;
    }

    uint32_t ota_flags;
    /* Get current active (running) firmware image flags */
    esp_err_t ret = aws_esp_ota_get_boot_flags( &ota_flags, true );

    if( ret != ESP_OK )
    {
        ESP_LOGE( TAG, "failed to get ota flags %d", ret );
        return OTA_ERR_COMMIT_FAILED;
    }

    /* If this is first request to set platform state, post bootup and there is not OTA being
     * triggered yet, then operate on active image flags, else use passive image flags */
    if( ( ota_ctx.cur_ota == NULL ) && ( ota_ctx.data_write_len == 0 ) )
    {
        if( ota_flags == ESP_OTA_IMG_PENDING_VERIFY )
        {
            ret = aws_esp_ota_set_boot_flags( state, true );

            if( ret != ESP_OK )
            {
                ESP_LOGE( TAG, "failed to set ota flags %d", ret );
                return OTA_ERR_COMMIT_FAILED;
            }
            else
            {
                /* RTC watchdog timer can now be stopped */
                disable_rtc_wdt();
            }
        }
        else
        {
            ESP_LOGW( TAG, "Image not in self test mode %d", ota_flags );
            eResult = ota_flags == ESP_OTA_IMG_VALID ? OTA_ERR_NONE : OTA_ERR_COMMIT_FAILED;
        }

        /* For debug purpose only, get current flags */
        aws_esp_ota_get_boot_flags( &ota_flags, true );
    }
    else
    {
        if( ( eState == OtaImageStateAccepted ) && ( ota_ctx.valid_image == false ) )
        {
            /* Incorrect update image or not yet validated */
            return OTA_ERR_COMMIT_FAILED;
        }

        if( ota_flags != ESP_OTA_IMG_VALID )
        {
            ESP_LOGE( TAG, "currently executing firmware not marked as valid, abort" );
            return OTA_ERR_COMMIT_FAILED;
        }

        ret = aws_esp_ota_set_boot_flags( state, false );

        if( ret != ESP_OK )
        {
            ESP_LOGE( TAG, "failed to set ota flags %d", ret );
            return OTA_ERR_COMMIT_FAILED;
        }
    }

    return eResult;
}
